--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "x-mlps-pytorch"
-version = "0.0.7"
-description = "A collection of MLPs / Feedforwards"
+version = "0.0.8"
+description = "A collection of MLPs / Feedforwards for Pytorch"
 authors = [
     { name = "Phil Wang", email = "lucidrains@gmail.com" }
 ]
@@ -49,4 +49,4 @@ pythonpath = [
 allow-direct-references = true
 
 [tool.hatch.build.targets.wheel]
-packages = ["x_mlps"]
+packages = ["x_mlps_pytorch"]
